ISP20211061 -  調整Fabric Crocking & Shrinkage Test、Fabric Oven Test。增加OnlineHelp

--- a/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Index.cshtml
@@ -335,6 +335,10 @@
         EditMode = false;
         IsEditModeChange();
         @Html.Raw(Model.ErrorMessage);
+
+        if (!$("body").hasClass("sidebar-collapse")) {
+            $(".menu-trigger").click();
+        }
     });
 
     function IsEditModeChange() {
