--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -313,7 +313,7 @@
                                     <tr>
                                         <td><h5>Remark</h5></td>
                                         <td colspan="5">
-                                            @Html.TextBoxFor(o => o.Heat_Main.HeatRemark, new { @style = "width:100%" })
+                                            @Html.TextBoxFor(o => o.Heat_Main.HeatRemark, new { @style = "width:100%", @disabled = "disabled" })
                                         </td>
                                     </tr>
                                 </tbody>
@@ -366,10 +366,10 @@
                                             </div>
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalOriginal, new { @class = "HorizontalTest", @type = "number", @step = "0.01" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalOriginal, new { @class = "HorizontalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalOriginal, new { @class = "VerticalTest", @type = "number", @step = "0.01" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalOriginal, new { @class = "VerticalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
                                             @{
@@ -391,13 +391,13 @@
                                             </select>
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalTest1, new { @class= "HorizontalTest", @type = "number", @step = "0.01" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalTest1, new { @class= "HorizontalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalTest2, new { @class = "HorizontalTest", @type = "number", @step = "0.01" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalTest2, new { @class = "HorizontalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalTest3, new { @class = "HorizontalTest", @type = "number", @step = "0.01" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalTest3, new { @class = "HorizontalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
                                             @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalAverage, new { @type = "number", @step = "0.01", @readonly="readonly" })
@@ -406,13 +406,13 @@
                                             @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].HorizontalRate, new { @type = "number", @step = "0.01", @readonly = "readonly" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalTest1, new { @class = "VerticalTest", @type = "number", @step = "0.01" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalTest1, new { @class = "VerticalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalTest2, new { @class = "VerticalTest", @type = "number", @step = "0.01" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalTest2, new { @class = "VerticalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalTest3, new { @class = "VerticalTest", @type = "number", @step = "0.01" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalTest3, new { @class = "VerticalTest", @type = "number", @step = "0.01", @min = "0", @max = "100", @oninput = "value=QtyCheck(value)" })
                                         </td>
                                         <td>
                                             @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalAverage, new { @type = "number", @step = "0.01", @readonly = "readonly" })
@@ -479,14 +479,14 @@
 
             $('#Save, #New').addClass("IsEditMode");
             $(".DataTable:not(.DetailTable) textarea").removeAttr("disabled", "disabled");
-            $(".DetailTable input,.DetailTable select").removeAttr("disabled", "disabled");
+            $(".DetailTable input,.DetailTable select, #Heat_Main_HeatRemark").removeAttr("disabled", "disabled");
             $(".detailDelete").show();
             DetailButtonBind();
         }
         else {
             $('#Save, #New').unbind('click').removeClass("IsEditMode");
             $(".DataTable:not(.DetailTable) textarea").attr("disabled", "disabled");
-            $(".DetailTable input,.DetailTable select").attr("disabled", "disabled");
+            $(".DetailTable input,.DetailTable select, #Heat_Main_HeatRemark").attr("disabled", "disabled");
             $(".detailDelete").hide();
             $('#Excel').addClass("IsEditMode");
 
@@ -862,8 +862,7 @@
 
             // 四折五入到第二位
             // ( HorizontalTest1 + HorizontalTest2  + HorizontalTest3 ) / 3
-            var avg = (value1 + value2 + value3) / 3;
-            avg = Math.round(avg * 100) / 100;
+            var avg = Round(accDiv(accAdd(accAdd(value1, value2), value3), 3));
             $('#Heat_Detail_' + idx + '__HorizontalAverage').val(avg);
 
             if (original == 0) {
@@ -871,8 +870,7 @@
                 return;
             }
             // (HorizontalAverage - HorizontalOriginal) / HorizontalOriginal * 100
-            var rate = (avg - original) / original * 100;
-            rate = Math.round(rate * 100) / 100;
+            var rate = Round(accMul(accDiv(accSubtr(avg, original), original), 100));
             $('#Heat_Detail_' + idx + '__HorizontalRate').val(rate);
         });
 
@@ -885,8 +883,7 @@
 
             // 四折五入到第二位
             // ( VerticalTest1 + VerticalTest2 + VerticalTest3 ) / 3
-            var avg = (value1 + value2 + value3) / 3;
-            avg = Math.round(avg * 100) / 100;
+            var avg = Round(accDiv(accAdd(accAdd(value1, value2), value3), 3));
             $('#Heat_Detail_' + idx + '__VerticalAverage').val(avg);
 
             if (original == 0) {
@@ -895,8 +892,7 @@
             }
 
             // (VerticalAverage - VerticalOriginal) / VerticalOriginal * 100
-            var rate = (avg - original) / original * 100;
-            rate = Math.round(rate * 100) / 100;
+            var rate = Round(accMul(accDiv(accSubtr(avg, original), original), 100));
             $('#Heat_Detail_' + idx + '__VerticalRate').val(rate);
         });
     }
@@ -915,5 +911,16 @@
     function GetPicture(data) {
         $('#Heat_Main_HeatTestBeforePicture').val(data.BeforePicture.replace("data:image/webp;base64,", ""));
         $('#Heat_Main_HeatTestAfterPicture').val(data.AfterPicture.replace("data:image/webp;base64,", ""));
+    }
+
+    function QtyCheck(value) {
+        if (parseFloat(value) >= 100) {
+            return 100;
+        }
+        else if (parseFloat(value) <= 0) {
+            return 0;
+        }
+
+        return value;
     }
 </script>
