ISP20211061 - 修改前端存檔流程

--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
@@ -147,7 +147,7 @@
         background-color: rgb(173, 216, 230);
     }
 </style>
-@using (Html.BeginForm("CrockingTest", ViewContext.RouteData.GetRequiredString("Controller"), FormMethod.Post, new { id = "DetailForm" }))
+@using (Html.BeginForm("CrockingTestSave", ViewContext.RouteData.GetRequiredString("Controller"), FormMethod.Post, new { id = "DetailForm" }))
 {
     <div class="main-content">
         <header class="page-header">
