--- a/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Index.cshtml
@@ -230,7 +230,7 @@
                             <tr>
                                 <td><h5>Remark</h5></td>
                                 <td colspan="5">
-                                    @Html.TextBoxFor(o => o.Main.Remark, "", new { @readonly = "readonly", @class = "OnlyEdit" })
+                                    @Html.TextBoxFor(o => o.Main.Remark, "", new { @readonly = "readonly", @class = "OnlyEdit", @style = "width:100%;" })
                                 </td>
                             </tr>
                             <tr>
