--- a/Quality/Quality/Views/Shared/_Layout.cshtml
+++ b/Quality/Quality/Views/Shared/_Layout.cshtml
@@ -279,7 +279,16 @@
             });
         }
 
+        function openHelp(evt, OnlineHelpURL) {
+            if (navigator.userAgent.indexOf("Chrome") == -1) {
+                evt = evt || window.event;
+            }
 
+            if (evt.keyCode == 112 && OnlineHelpURL != '') {
+                window.open(OnlineHelpURL);
+                evt.preventDefault();
+            }
+        }
 
         function ShowLoading() {
             // 開啟Loading物件，避免亂按
